; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_4xm.c_fourxm_probe.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_4xm.c_fourxm_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@RIFF_TAG = common dso_local global i64 0, align 8
@FOURXMV_TAG = common dso_local global i64 0, align 8
@AVPROBE_SCORE_MAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*)* @fourxm_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fourxm_probe(%struct.TYPE_3__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_3__*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i32*, i32** %5, align 8
  %7 = getelementptr inbounds i32, i32* %6, i64 0
  %8 = call i64 @AV_RL32(i32* %7)
  %9 = load i64, i64* @RIFF_TAG, align 8
  %10 = icmp ne i64 %8, %9
  br i1 %10, label %19, label %11

11:                                               ; preds = %1
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i32*, i32** %13, align 8
  %15 = getelementptr inbounds i32, i32* %14, i64 8
  %16 = call i64 @AV_RL32(i32* %15)
  %17 = load i64, i64* @FOURXMV_TAG, align 8
  %18 = icmp ne i64 %16, %17
  br i1 %18, label %19, label %20

19:                                               ; preds = %11, %1
  store i32 0, i32* %2, align 4
  br label %22

20:                                               ; preds = %11
  %21 = load i32, i32* @AVPROBE_SCORE_MAX, align 4
  store i32 %21, i32* %2, align 4
  br label %22

22:                                               ; preds = %20, %19
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i64 @AV_RL32(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
